LittleDuckParser.py
# Generated from LittleDuck.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LittleDuckParser ( Parser ):

    grammarFileName = "LittleDuck.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "';'", "'main'", "'end'", 
                     "'int'", "'float'", "'var'", "':'", "','", "'void'", 
                     "'('", "')'", "'['", "']'", "'='", "'if'", "'else'", 
                     "'do'", "'while'", "'{'", "'}'", "'print'", "'>'", 
                     "'<'", "'!='", "'>='", "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "CTE_INT", 
                      "CTE_FLOAT", "CTE_STRING", "WS" ]

    RULE_programa = 0
    RULE_type = 1
    RULE_vars = 2
    RULE_var_list = 3
    RULE_var_declaration = 4
    RULE_id_list_vars = 5
    RULE_funcs = 6
    RULE_id_list_funcs = 7
    RULE_assign = 8
    RULE_condition = 9
    RULE_conditionElse = 10
    RULE_cycle = 11
    RULE_body = 12
    RULE_statementList = 13
    RULE_statement = 14
    RULE_fCall = 15
    RULE_expressionList = 16
    RULE_expressionList_ = 17
    RULE_print = 18
    RULE_printList = 19
    RULE_printList_tail = 20
    RULE_expression = 21
    RULE_operador = 22
    RULE_exp = 23
    RULE_operador_exp = 24
    RULE_termino = 25
    RULE_operador_termino = 26
    RULE_factor = 27
    RULE_id_or_cte = 28
    RULE_cte = 29
    RULE_suma_resta = 30

    ruleNames =  [ "programa", "type", "vars", "var_list", "var_declaration", 
                   "id_list_vars", "funcs", "id_list_funcs", "assign", "condition", 
                   "conditionElse", "cycle", "body", "statementList", "statement", 
                   "fCall", "expressionList", "expressionList_", "print", 
                   "printList", "printList_tail", "expression", "operador", 
                   "exp", "operador_exp", "termino", "operador_termino", 
                   "factor", "id_or_cte", "cte", "suma_resta" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    ID=31
    CTE_INT=32
    CTE_FLOAT=33
    CTE_STRING=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LittleDuckParser.ID, 0)

        def vars_(self):
            return self.getTypedRuleContext(LittleDuckParser.VarsContext,0)


        def funcs(self):
            return self.getTypedRuleContext(LittleDuckParser.FuncsContext,0)


        def body(self):
            return self.getTypedRuleContext(LittleDuckParser.BodyContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = LittleDuckParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(LittleDuckParser.T__0)
            self.state = 63
            self.match(LittleDuckParser.ID)
            self.state = 64
            self.match(LittleDuckParser.T__1)
            self.state = 65
            self.vars_()
            self.state = 66
            self.funcs()
            self.state = 67
            self.match(LittleDuckParser.T__2)
            self.state = 68
            self.body()
            self.state = 69
            self.match(LittleDuckParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LittleDuckParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = LittleDuckParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            _la = self._input.LA(1)
            if not(_la==5 or _la==6):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_list(self):
            return self.getTypedRuleContext(LittleDuckParser.Var_listContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars" ):
                listener.enterVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars" ):
                listener.exitVars(self)




    def vars_(self):

        localctx = LittleDuckParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vars)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.match(LittleDuckParser.T__6)
                self.state = 74
                self.var_list()
                pass
            elif token in [3, 10, 20]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declaration(self):
            return self.getTypedRuleContext(LittleDuckParser.Var_declarationContext,0)


        def var_list(self):
            return self.getTypedRuleContext(LittleDuckParser.Var_listContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_var_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_list" ):
                listener.enterVar_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_list" ):
                listener.exitVar_list(self)




    def var_list(self):

        localctx = LittleDuckParser.Var_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_list)
        try:
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8, 9, 31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.var_declaration()
                self.state = 79
                self.match(LittleDuckParser.T__1)
                self.state = 80
                self.var_list()
                pass
            elif token in [3, 10, 20]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list_vars(self):
            return self.getTypedRuleContext(LittleDuckParser.Id_list_varsContext,0)


        def type_(self):
            return self.getTypedRuleContext(LittleDuckParser.TypeContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_var_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_declaration" ):
                listener.enterVar_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_declaration" ):
                listener.exitVar_declaration(self)




    def var_declaration(self):

        localctx = LittleDuckParser.Var_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.id_list_vars()
            self.state = 86
            self.match(LittleDuckParser.T__7)
            self.state = 87
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_list_varsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LittleDuckParser.ID, 0)

        def id_list_vars(self):
            return self.getTypedRuleContext(LittleDuckParser.Id_list_varsContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_id_list_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_list_vars" ):
                listener.enterId_list_vars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_list_vars" ):
                listener.exitId_list_vars(self)




    def id_list_vars(self):

        localctx = LittleDuckParser.Id_list_varsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_id_list_vars)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(LittleDuckParser.ID)
                self.state = 90
                self.id_list_vars()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.match(LittleDuckParser.T__8)
                self.state = 92
                self.match(LittleDuckParser.ID)
                self.state = 93
                self.id_list_vars()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LittleDuckParser.ID, 0)

        def id_list_funcs(self):
            return self.getTypedRuleContext(LittleDuckParser.Id_list_funcsContext,0)


        def vars_(self):
            return self.getTypedRuleContext(LittleDuckParser.VarsContext,0)


        def body(self):
            return self.getTypedRuleContext(LittleDuckParser.BodyContext,0)


        def funcs(self):
            return self.getTypedRuleContext(LittleDuckParser.FuncsContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs" ):
                listener.enterFuncs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs" ):
                listener.exitFuncs(self)




    def funcs(self):

        localctx = LittleDuckParser.FuncsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcs)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.match(LittleDuckParser.T__9)
                self.state = 98
                self.match(LittleDuckParser.ID)
                self.state = 99
                self.match(LittleDuckParser.T__10)
                self.state = 100
                self.id_list_funcs()
                self.state = 101
                self.match(LittleDuckParser.T__11)
                self.state = 102
                self.match(LittleDuckParser.T__12)
                self.state = 103
                self.vars_()
                self.state = 104
                self.body()
                self.state = 105
                self.match(LittleDuckParser.T__13)
                self.state = 106
                self.match(LittleDuckParser.T__1)
                self.state = 107
                self.funcs()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_list_funcsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LittleDuckParser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(LittleDuckParser.TypeContext,0)


        def id_list_funcs(self):
            return self.getTypedRuleContext(LittleDuckParser.Id_list_funcsContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_id_list_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_list_funcs" ):
                listener.enterId_list_funcs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_list_funcs" ):
                listener.exitId_list_funcs(self)




    def id_list_funcs(self):

        localctx = LittleDuckParser.Id_list_funcsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_id_list_funcs)
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(LittleDuckParser.ID)
                self.state = 113
                self.match(LittleDuckParser.T__7)
                self.state = 114
                self.type_()
                self.state = 115
                self.id_list_funcs()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(LittleDuckParser.T__8)
                self.state = 118
                self.match(LittleDuckParser.ID)
                self.state = 119
                self.match(LittleDuckParser.T__7)
                self.state = 120
                self.type_()
                self.state = 121
                self.id_list_funcs()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LittleDuckParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(LittleDuckParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = LittleDuckParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(LittleDuckParser.ID)
            self.state = 127
            self.match(LittleDuckParser.T__14)
            self.state = 128
            self.expression()
            self.state = 129
            self.match(LittleDuckParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(LittleDuckParser.ExpressionContext,0)


        def body(self):
            return self.getTypedRuleContext(LittleDuckParser.BodyContext,0)


        def conditionElse(self):
            return self.getTypedRuleContext(LittleDuckParser.ConditionElseContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = LittleDuckParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(LittleDuckParser.T__15)
            self.state = 132
            self.match(LittleDuckParser.T__10)
            self.state = 133
            self.expression()
            self.state = 134
            self.match(LittleDuckParser.T__11)
            self.state = 135
            self.body()
            self.state = 136
            self.conditionElse()
            self.state = 137
            self.match(LittleDuckParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionElseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(LittleDuckParser.BodyContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_conditionElse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionElse" ):
                listener.enterConditionElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionElse" ):
                listener.exitConditionElse(self)




    def conditionElse(self):

        localctx = LittleDuckParser.ConditionElseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_conditionElse)
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(LittleDuckParser.T__16)
                self.state = 140
                self.body()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CycleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(LittleDuckParser.BodyContext,0)


        def expression(self):
            return self.getTypedRuleContext(LittleDuckParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_cycle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCycle" ):
                listener.enterCycle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCycle" ):
                listener.exitCycle(self)




    def cycle(self):

        localctx = LittleDuckParser.CycleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_cycle)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(LittleDuckParser.T__17)
            self.state = 145
            self.body()
            self.state = 146
            self.match(LittleDuckParser.T__18)
            self.state = 147
            self.match(LittleDuckParser.T__10)
            self.state = 148
            self.expression()
            self.state = 149
            self.match(LittleDuckParser.T__11)
            self.state = 150
            self.match(LittleDuckParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(LittleDuckParser.StatementListContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = LittleDuckParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(LittleDuckParser.T__19)
            self.state = 153
            self.statementList()
            self.state = 154
            self.match(LittleDuckParser.T__20)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(LittleDuckParser.StatementContext,0)


        def statementList(self):
            return self.getTypedRuleContext(LittleDuckParser.StatementListContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_statementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementList" ):
                listener.enterStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementList" ):
                listener.exitStatementList(self)




    def statementList(self):

        localctx = LittleDuckParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_statementList)
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16, 18, 22, 31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.statement()
                self.state = 157
                self.statementList()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(LittleDuckParser.AssignContext,0)


        def condition(self):
            return self.getTypedRuleContext(LittleDuckParser.ConditionContext,0)


        def cycle(self):
            return self.getTypedRuleContext(LittleDuckParser.CycleContext,0)


        def fCall(self):
            return self.getTypedRuleContext(LittleDuckParser.FCallContext,0)


        def print_(self):
            return self.getTypedRuleContext(LittleDuckParser.PrintContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = LittleDuckParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_statement)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.condition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 164
                self.cycle()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 165
                self.fCall()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 166
                self.print_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LittleDuckParser.ID, 0)

        def expressionList(self):
            return self.getTypedRuleContext(LittleDuckParser.ExpressionListContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_fCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFCall" ):
                listener.enterFCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFCall" ):
                listener.exitFCall(self)




    def fCall(self):

        localctx = LittleDuckParser.FCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_fCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(LittleDuckParser.ID)
            self.state = 170
            self.match(LittleDuckParser.T__10)
            self.state = 171
            self.expressionList()
            self.state = 172
            self.match(LittleDuckParser.T__11)
            self.state = 173
            self.match(LittleDuckParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(LittleDuckParser.ExpressionContext,0)


        def expressionList_(self):
            return self.getTypedRuleContext(LittleDuckParser.ExpressionList_Context,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_expressionList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionList" ):
                listener.enterExpressionList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionList" ):
                listener.exitExpressionList(self)




    def expressionList(self):

        localctx = LittleDuckParser.ExpressionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_expressionList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.expression()
            self.state = 176
            self.expressionList_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionList_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(LittleDuckParser.ExpressionContext,0)


        def expressionList_(self):
            return self.getTypedRuleContext(LittleDuckParser.ExpressionList_Context,0)

